10-12-2025
- fix omori calendar project script
- move install.sh to scripts
- add plasma support
- fix desktop-theme-sync failing to eval if there are no users with home-manager
- move desktop-theme-sync to modules/nixos/mixins/desktop.nix
- fix an issue with plasma where cursor would reset when selected due to default stylix configuration.


10-08-2025
- add swww flake input
- revamp swww:
  - use latest version
  - use cache files to combat the monitor disconnect bug
	- Script should now work for any running wayland session under multiple users on the system
- disable all default hyprland wallpapers by default.
- fix mod+shift+e on sway not properly exiting the WM because of a missing 'exec'
- add "imageViewer"" and "mediaPlayer" to home-manager config.meta
- remove relay node use for synthing config
- fix a discrepency with the btop package added to home-manager.
  The btop package will attempt to autodetect the gpu type "amd" or "nvidia" from nixos
  and install the correct pacakge for the user so gpu stats are properly displayed.
- fix missing icons for the oneshot world machine edition theme
- change default filemanager to dolphin for desktop


9-23-2025
- separate password-store modules for home-manager

- did alot of stuff, I kind of lost track since last month


8-27-2025
- remove gamemode from steam module
- moved keybind for sway nc from $mainmod+shift+n to $mainmod+n for sway and hyprland
- readded qemu to cypher
- add libreoffice to cypher


8-26-2025
- move battery for windows-11 waybar to the left side


8-25-2025
- move some modules from /templates to /mixins
- remove suites from home-manager
- integrate direnv into gman.nix-development.enable


8-24-2025
- add syncthing
- use grub for all machines by default
- change default path for minecraft server


8-22-2025
- hotfix for yazi, xdg-open doesn't seem to work correctly with it anymore
- update flake


8-16-2025
- release v7
- finalize think-two
- add gtk portal to home-manager hyprland config

